@@ -14,6 +14,7 @@ CHANGES IN CUPS V2.0.3
 	  (STR #4595)
 	- cupsRasterReadHeader did not fully validate the raster header
 	  (STR #4596)
+	- The rastertopwg filter did not check for truncated input (STR #4597)
 	- Added Russian translation (STR #4577)
 
 
